bk_ida/gccida/c1/redirect_edge_and_branch
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/cfgrtl.c:1303:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)end[4]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/cfgrtl.c:1308:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)end[4] != head ) 
           ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/cfgrtl.c:1335:37: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), arg0); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/cfgrtl.c:1347:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( rtx)end[2]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/cfgrtl.c:1359:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int64)v15[1]; 
                ^~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/redirect_edge_and_branch/src/obj/cfgrtl.o] Error 1
